<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="@dimen/dimen_0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layerType="software"
                app:navigationIcon="@mipmap/icon_back_white" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_28dp"
            android:text="@string/fb_login_digit_title"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_marginBottom="223dp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/btnResendCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_28dp"
            android:text="@string/fb_login_digit_desc"
            android:textColor="#ddd"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginBottom="@dimen/dimen_16dp"
            app:layout_constraintBottom_toTopOf="@+id/passcodeInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="113dp"
            app:layout_constraintBottom_toTopOf="@+id/btnResendCode" />

        <com.example.baselibrary.ui.CodeEditText
            android:id="@+id/passcodeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="number"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:strokeBackground="@drawable/bg_verify_code"
            app:strokeLength="4" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:indeterminateTint="#8e8e8e"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/passcodeInput"
            app:layout_constraintTop_toBottomOf="@+id/passcodeInput"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/errText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="8dp"
            android:layerType="software"
            android:text="@string/fb_login_digit_code_invalid"
            android:textColor="#ff3131"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passcodeInput"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errText" />

        <TextView
            android:id="@+id/btnResendCode"
            style="@style/yellow_12c_button_style_with_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen_28dp"
            android:layout_marginEnd="@dimen/dimen_28dp"
            android:enabled="false"
            android:text="@string/fb_send_code"
            android:layout_marginTop="345dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/notEmailTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnResendCode"
            tools:visibility="visible">

            <TextView
                android:id="@+id/notEmailTip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/fb_login_email_verify_not_email_tip1"
                android:textColor="#aab2e6"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/notEmailTip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/fb_login_email_verify_not_email_tip2"
                android:textColor="#aab2e6"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>